# synesthesia

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/audio/: mod.rs  signal_processing.rs
src/graphics/: mod.rs  rendering_system.rs
src/graphics/shaders/: ambient.frag  deferred.frag  deferred.vert  directional.frag
src/resource_pool/: mod.rs  model_loader.rs  sound_loader.rs
