[package]
name = "synesthesia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.29.0"
winit = "0.26.0"
vulkano-win = "0.29.0"
vulkano-shaders = "0.29.0"
bytemuck = "1.9.1"
nalgebra-glm = "0.17.0"
gltf = "1.0.0"

cpal = "0.13.5"
symphonia = { version = "0.5", features = [ "aac", "alac", "mp3", "isomp4" ] }
rustfft = "6.0.1"